--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -1,5 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>reeeeed robins</h1>
-<h2>yum! (from index)</h2>
+<h1>{{ request.user }}'s Habits</h1>
+
+    <p>
+    {% for habit in request.user.user_habits.all %}
+        <p><a href="{{ habit.get_absolute_url }}">{{ habit.goal }}</a></p>
+        Goals today:
+        {{ habit.action|title }} {{ habit.quantity}} {{habit.item}}
+    {% endfor %}
 {% endblock %}
