--- a/core/templates/habit_new.html
+++ b/core/templates/habit_new.html
@@ -1,9 +1,18 @@
 {% extends "base.html" %}
+{% load widget_tweaks %}
 
 {% block content %}
-    <h2>New Habit</h2>
-    <form method="POST" class="post-form">{% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="save btn btn-default">Save</button>
+<div class="login-container">
+    <form method="POST" class="post-form" novalidate>
+        {% csrf_token %}
+        {{ form }}
+        <table>
+            <th>{{ field.help_text}}</th>
+            <td>
+                {{ field }}
+            </td>
+        </table>
+        <button type="submit" class="login-button">Save</button>
     </form>
+</div>
 {% endblock %}
