--- a/core/templates/dailyrecord_form.html
+++ b/core/templates/dailyrecord_form.html
@@ -1,14 +1,13 @@
 {% extends "base.html" %}
+{% load widget_tweaks %}
 
 {% block content %}
 <p>Post your daily record for this habit: <a href="{% url 'habit-detail' habit.pk %}">{{ habit.goal }}</a></p>
-<p>For "quantity," enter how many {{ habit.item }}s you {{ habit.action }}ed today</p>
-<form action="" method="post">
+
+<form method="POST">
     {% csrf_token %}
-    <table>
-    {{ form.as_table }}
-    </table>
-    <input type="submit" value="Submit" />
+    <p>{{ habit.item }} for today:</p> {{ form.as_p }}
+    <button type="submit">Submit</button>
     
 </form>
 {% endblock %}
