--- a/core/templates/habit_detail.html
+++ b/core/templates/habit_detail.html
@@ -1,24 +1,21 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>{{ habit.goal }}</h1>
+<div class="form-container">
+    <h1>{{ habit.goal }}</h1>
 
-<p><strong>Action:</strong> {{ habit.action }}</p>
-<p><strong>Quantity:</strong> {{ habit.quantity }}</p>
-<p><strong>Item:</strong> {{ habit.item}}</p>
+    <a href="{% url 'dailyrecord_form' habit.id %}">Add your daily record.</a></p>
 
-<a href="{% url 'dailyrecord_form' habit.id %}">Add your daily record.</a></p>
+    {% for dailyrecord in habit.dailyrecord_set.all %}
+    <hr>
+    <p>({{dailyrecord.date}}): {{dailyrecord.quantity}}</p>
 
-{% for dailyrecord in habit.dailyrecord_set.all %}
-<hr>
-<p>({{dailyrecord.date}}): {{dailyrecord.quantity}}</p>
-
-    {% if dailyrecord.quantity >= habit.quantity %}
-        <p>Congratulations - you've met your goal!</p>
-    {% else %}
-        <p>You have not met your goal yet.</p>
-    {% endif %}
-{% endfor %}
-<hr>
+        {% if dailyrecord.quantity >= habit.quantity %}
+            <p>Congratulations - you've met your goal!</p>
+        {% else %}
+            <p>You have not met your goal yet.</p>
+        {% endif %}
+    {% endfor %}
+    <hr>
 
 </div>
 
