--- a/core/templates/habit_new.html
+++ b/core/templates/habit_new.html
@@ -2,7 +2,7 @@
 {% load widget_tweaks %}
 
 {% block content %}
-<div class="login-container">
+<div class="form-container">
     <form method="POST" class="post-form" novalidate>
         {% csrf_token %}
         {{ form }}
