--- a/core/static/scss/styles.scss
+++ b/core/static/scss/styles.scss
@@ -16,7 +16,7 @@ body {
 .random-img::before{
   content: ' ';
   background: url($img) fixed top center no-repeat;
-  filter: blur(3px) brightness(0.4);
+  filter: blur(3px) brightness(0.5);
   left: 0;
   top: 0;
   width: 100%;
@@ -109,10 +109,11 @@ nav {
   text-decoration: none;
 }
 
-.login-container {
+.form-container {
   margin: 0 auto;
   text-align: center;
   padding: 10px;
+  font-family: 'Montserrat', sans-serif;
 }
 
 form {
@@ -122,6 +123,41 @@ form {
   text-align: center;
   text-decoration: none;
   padding: 20px;
+}
+
+p { 
+  font-family: 'Montserrat', sans-serif;
+  text-align: center;
+  display: block;
+  padding: 10px;
+}
+
+input[type=submit] {
+  color: #000;
+  text-transform: uppercase;
+  outline: none;
+  font-size: 0.5em;
+  font-weight: 600;
+  background: rgba(250, 248, 244, 0.9);
+  padding: 1em 1.5em;
+  box-shadow: inset 0 -2px 0 0 rgba(0,0,0,.2);
+  &:hover,
+  &:focus-within {
+    color: #555;
+    &:active {
+      color: rgba(36, 33, 30, 1);
+      box-shadow: inset 0 -4px 0 0 rgba(0,0,0,.2);
+    }
+  }
+}
+
+span {
+  display: block;
+  padding: 10px;
+}
+
+ul {
+  list-style-type: none;
 }
 
 button {
