--- a/core/templates/registration/login.html
+++ b/core/templates/registration/login.html
@@ -1,11 +1,10 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="login-container">
+<div class="form-container">
     <h2>Login</h2>
         <form method="POST">
             {% csrf_token %}
-            {{ form.as_p }}
             <button type="submit">Login</button>
         </form>
 </div>
