--- a/core/templates/registration/reg_form.html
+++ b/core/templates/registration/reg_form.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="login-container">
+<div class="form-container">
     <h2>Register</h2>
         <form method="POST">
             {% csrf_token %}
